refactor classes, add additional check for add method in history manager